Fix spacing result-icon

--- a/src/components/Celebrity/Celebrity.scss
+++ b/src/components/Celebrity/Celebrity.scss
@@ -10,7 +10,7 @@
   '. vote .'
   'results results results';
   grid-template-rows: 30%  20% repeat(3,auto) 10%;
-  column-gap: 5px;
+  column-gap: 20px;
   grid-template-columns: 6% auto 10%;
 
   &__icon-result {
